@@ -1,3 +1,5 @@
+* pass 'prevmatch' to alert matcher plugins.
+  -- niko, from Dylan Vanderhoof <DylanV *semaphore.com>
 * fix subject in tSmoke 'morning' emails.  --niko, 
    from Jean-Philippe Luiggi <Jean-Philippe.Luiggi *revolutionlinux.com>
 * AnotherDNS.pm: added option 'require_answers' for testing
